// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot if the list is empty 1`] = `<div />`;

exports[`should match snapshot if the list is expanded 1`] = `
<div>
  <h2>
    Choose a clinic from the following list:
    <abbr
      class="usa-hint usa-hint--required"
    >
       *
    </abbr>
  </h2>
  <form
    class="usa-form usa-form--large"
  >
    <fieldset
      class="usa-fieldset"
    >
      <div
        class="usa-radio"
      >
        <input
          class="usa-radio__input usa-radio__input--tile"
          id="CLINIC ZERO"
          type="radio"
          value="CLINIC ZERO"
        />
        <label
          class="usa-radio__label"
          for="CLINIC ZERO"
        >
          <div
            class="clinic-info"
          >
            <div
              class="clinic-name"
            >
              CLINIC ZERO
            </div>
            <div
              class="usa-checkbox__label-description"
            >
              <div
                class="clinic-street-address"
              >
                0000 St, Helena, MT 00000
              </div>
              <div
                class="clinic-phone"
              >
                (000) 000-0000
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="usa-radio"
      >
        <input
          class="usa-radio__input usa-radio__input--tile"
          id="CLINIC ONE"
          type="radio"
          value="CLINIC ONE"
        />
        <label
          class="usa-radio__label"
          for="CLINIC ONE"
        >
          <div
            class="clinic-info"
          >
            <div
              class="clinic-name"
            >
              CLINIC ONE
            </div>
            <div
              class="usa-checkbox__label-description"
            >
              <div
                class="clinic-street-address"
              >
                1111 St, Helena, MT 11111
              </div>
              <div
                class="clinic-phone"
              >
                (111) 111-1111
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="usa-radio"
      >
        <input
          class="usa-radio__input usa-radio__input--tile"
          id="CLINIC TWO"
          type="radio"
          value="CLINIC TWO"
        />
        <label
          class="usa-radio__label"
          for="CLINIC TWO"
        >
          <div
            class="clinic-info"
          >
            <div
              class="clinic-name"
            >
              CLINIC TWO
            </div>
            <div
              class="usa-checkbox__label-description"
            >
              <div
                class="clinic-street-address"
              >
                2222 St, Helena, MT 22222
              </div>
              <div
                class="clinic-phone"
              >
                (222) 222-2222
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="usa-radio"
      >
        <input
          class="usa-radio__input usa-radio__input--tile"
          id="CLINIC THREE"
          type="radio"
          value="CLINIC THREE"
        />
        <label
          class="usa-radio__label"
          for="CLINIC THREE"
        >
          <div
            class="clinic-info"
          >
            <div
              class="clinic-name"
            >
              CLINIC THREE
            </div>
            <div
              class="usa-checkbox__label-description"
            >
              <div
                class="clinic-street-address"
              >
                3333 St, Helena, MT 33333
              </div>
              <div
                class="clinic-phone"
              >
                (333) 333-3333
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="usa-radio"
      >
        <input
          class="usa-radio__input usa-radio__input--tile"
          id="CLINIC FOUR"
          type="radio"
          value="CLINIC FOUR"
        />
        <label
          class="usa-radio__label"
          for="CLINIC FOUR"
        >
          <div
            class="clinic-info"
          >
            <div
              class="clinic-name"
            >
              CLINIC FOUR
            </div>
            <div
              class="usa-checkbox__label-description"
            >
              <div
                class="clinic-street-address"
              >
                4444 St, Helena, MT 44444
              </div>
              <div
                class="clinic-phone"
              >
                (444) 444-4444
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="usa-radio"
      >
        <input
          class="usa-radio__input usa-radio__input--tile"
          id="CLINIC FIVE"
          type="radio"
          value="CLINIC FIVE"
        />
        <label
          class="usa-radio__label"
          for="CLINIC FIVE"
        >
          <div
            class="clinic-info"
          >
            <div
              class="clinic-name"
            >
              CLINIC FIVE
            </div>
            <div
              class="usa-checkbox__label-description"
            >
              <div
                class="clinic-street-address"
              >
                5555 St, Helena, MT 55555
              </div>
              <div
                class="clinic-phone"
              >
                (555) 555-5555
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="usa-radio"
      >
        <input
          class="usa-radio__input usa-radio__input--tile"
          id="CLINIC SIX"
          type="radio"
          value="CLINIC SIX"
        />
        <label
          class="usa-radio__label"
          for="CLINIC SIX"
        >
          <div
            class="clinic-info"
          >
            <div
              class="clinic-name"
            >
              CLINIC SIX
            </div>
            <div
              class="usa-checkbox__label-description"
            >
              <div
                class="clinic-street-address"
              >
                6666 St, Helena, MT 66666
              </div>
              <div
                class="clinic-phone"
              >
                (666) 666-6666
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="usa-radio"
      >
        <input
          class="usa-radio__input usa-radio__input--tile"
          id="CLINIC SEVEN"
          type="radio"
          value="CLINIC SEVEN"
        />
        <label
          class="usa-radio__label"
          for="CLINIC SEVEN"
        >
          <div
            class="clinic-info"
          >
            <div
              class="clinic-name"
            >
              CLINIC SEVEN
            </div>
            <div
              class="usa-checkbox__label-description"
            >
              <div
                class="clinic-street-address"
              >
                7777 St, Helena, MT 77777
              </div>
              <div
                class="clinic-phone"
              >
                (777) 777-7777
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="usa-radio"
      >
        <input
          checked=""
          class="usa-radio__input usa-radio__input--tile"
          id="CLINIC EIGHT"
          type="radio"
          value="CLINIC EIGHT"
        />
        <label
          class="usa-radio__label"
          for="CLINIC EIGHT"
        >
          <div
            class="clinic-info"
          >
            <div
              class="clinic-name"
            >
              CLINIC EIGHT
            </div>
            <div
              class="usa-checkbox__label-description"
            >
              <div
                class="clinic-street-address"
              >
                8888 St, Helena, MT 88888
              </div>
              <div
                class="clinic-phone"
              >
                (888) 888-8888
              </div>
            </div>
          </div>
        </label>
      </div>
    </fieldset>
    <button
      class="usa-button usa-button--small display-block margin-top-6"
    >
      Continue
    </button>
  </form>
</div>
`;

exports[`should match snapshot if the list is not expanded 1`] = `
<div>
  <h2>
    Choose a clinic from the following list:
    <abbr
      class="usa-hint usa-hint--required"
    >
       *
    </abbr>
  </h2>
  <form
    class="usa-form usa-form--large"
  >
    <fieldset
      class="usa-fieldset"
    >
      <div
        class="usa-radio"
      >
        <input
          class="usa-radio__input usa-radio__input--tile"
          id="CLINIC ZERO"
          type="radio"
          value="CLINIC ZERO"
        />
        <label
          class="usa-radio__label"
          for="CLINIC ZERO"
        >
          <div
            class="clinic-info"
          >
            <div
              class="clinic-name"
            >
              CLINIC ZERO
            </div>
            <div
              class="usa-checkbox__label-description"
            >
              <div
                class="clinic-street-address"
              >
                0000 St, Helena, MT 00000
              </div>
              <div
                class="clinic-phone"
              >
                (000) 000-0000
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="usa-radio"
      >
        <input
          class="usa-radio__input usa-radio__input--tile"
          id="CLINIC ONE"
          type="radio"
          value="CLINIC ONE"
        />
        <label
          class="usa-radio__label"
          for="CLINIC ONE"
        >
          <div
            class="clinic-info"
          >
            <div
              class="clinic-name"
            >
              CLINIC ONE
            </div>
            <div
              class="usa-checkbox__label-description"
            >
              <div
                class="clinic-street-address"
              >
                1111 St, Helena, MT 11111
              </div>
              <div
                class="clinic-phone"
              >
                (111) 111-1111
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="usa-radio"
      >
        <input
          class="usa-radio__input usa-radio__input--tile"
          id="CLINIC TWO"
          type="radio"
          value="CLINIC TWO"
        />
        <label
          class="usa-radio__label"
          for="CLINIC TWO"
        >
          <div
            class="clinic-info"
          >
            <div
              class="clinic-name"
            >
              CLINIC TWO
            </div>
            <div
              class="usa-checkbox__label-description"
            >
              <div
                class="clinic-street-address"
              >
                2222 St, Helena, MT 22222
              </div>
              <div
                class="clinic-phone"
              >
                (222) 222-2222
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="usa-radio"
      >
        <input
          class="usa-radio__input usa-radio__input--tile"
          id="CLINIC THREE"
          type="radio"
          value="CLINIC THREE"
        />
        <label
          class="usa-radio__label"
          for="CLINIC THREE"
        >
          <div
            class="clinic-info"
          >
            <div
              class="clinic-name"
            >
              CLINIC THREE
            </div>
            <div
              class="usa-checkbox__label-description"
            >
              <div
                class="clinic-street-address"
              >
                3333 St, Helena, MT 33333
              </div>
              <div
                class="clinic-phone"
              >
                (333) 333-3333
              </div>
            </div>
          </div>
        </label>
      </div>
      <button
        class="usa-button usa-button--small display-block usa-button--unstyled margin-top-1"
      >
        Show more clinic options
      </button>
    </fieldset>
    <button
      class="usa-button usa-button--small display-block margin-top-6"
    >
      Continue
    </button>
  </form>
</div>
`;
